# flashcards

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: lib.rs
